--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:label="bornesan"
         android:name="${applicationName}"
@@ -29,5 +31,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            
+            <meta-data
+      android:name="com.google.firebase.messaging.default_notification_channel_id"
+      android:value="your_channel_id" />
+
     </application>
 </manifest>
