--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,17 @@ dependencies:
   firebase_ui_auth: ^1.9.1
   syncfusion_flutter_charts: ^23.1.44
   flutter_datetime_picker_plus: ^2.1.0
-  flutter_local_notifications: ^16.1.0
+  #flutter_local_notifications: ^16.1.0
+  awesome_notifications: ^0.8.2
+  mailer: ^6.0.1
+  google_sign_in: ^6.1.6
+  image_picker: ^1.0.4
+  firebase_storage: ^11.5.3
+  provider: ^6.1.1
+  flutter_secure_storage: ^9.0.0
+  shared_preferences: ^2.2.2
+  intl: ^0.18.1
+  d_chart: ^2.6.3
 
 dev_dependencies:
   flutter_test:
